# InstructionsPlaner

./: .gitignore  README.md  git.patch  pyproject.toml
backend/: db.py  main.py  models.py  notifications.py  shared.py
backend/dto/: authentication.py  user.py
backend/repositories/: authentication.py  user.py
backend/routers/: authentication.py  counter.py  event_system.py  home.py  user.py
backend/services/: authentication.py  user.py
frontend/: event_loader.html
frontend/counter/: counter.css  counter.html
frontend/home/: home.css  home.html  notification.css  notification.html  practice.css  practice.html
frontend/index/: index.html
frontend/login/: login.css  login.html
frontend/registration/: confirmation.css  confirmation.html  register.css  register.html
