[project]
name = "instructionsplaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datastar-py>=1.0.2",
    "fastapi[standard]>=0.138.0",
    "jinja2>=3.1.6",
    "psycopg2>=2.9.12",
    "sqlalchemy>=2.0.51",
]

[tool.fastapi]
entrypoint = "backend.main:app" # root is in the same level as pyproject.toml
